--- a/styles/style.css
+++ b/styles/style.css
@@ -64,7 +64,9 @@ body {
 button {
     color: #e5e7eb;
     background-color: #3882f6;
-    border-radius: 10rem;
+    border-radius: 5rem;
+    border-style: solid;
+    border-color: #e5e7eb;
 }
 
 .middle {
@@ -77,15 +79,38 @@ button {
 
 .testimonial {
     background-color: #e5e7eb;
+    padding: 80px 0px;
+}
 
+.action-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #e5e7eb;
+}
+
+.action-text h3 {
+    margin-bottom: 0px;
+}
+.action-text p {
+    margin-top: 0px;
 }
 
 .sign-up {
-
+    width: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .action {
-
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
+    margin-top: 40px;
+    background-color: #3882f6;
+    width: 100vh;
 }
 
 .footer {
